--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
-title:            Balzac
+title:            El rosado
 tagline:          A beautiful theme.
 description:      Describe your website.
 canonical: http://jekyll.gtat.me
 
 # Owner/author information
 owner:
-  name:           Cole Townsend
+  name:           SuperCines
   avatar:         avatar.png
   bio:            "Aesthete & Athlete"
-  email:          cole@coletownsend.com
-  twitter:        twnsndco
-  github:         coletownsend
-  instagram:      ctrunsthis
+  email:          servisioalcliente@elrosado.com
+  twitter:        supercines1
+  github:         supercines
+  instagram:      supercines
   dribbble:       coletownsend
   disqus:         balzac
-  location:       "Buffalo, NY"
+  location:       
   # Plug in your disqus shortname!
 
 tools:
@@ -30,11 +30,11 @@ opengraph:
 links:
   - title: About
     url: /about
-  - title: Github
-    url: https://github.com/ColeTownsend/Balzac-for-Jekyll
+  - title: 
+    url: 
     external: true
-  - title: Cole Who?
-    url: http://coletownsend.com
+  - title: 
+    url: 
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
